Fix navbar collapse compatibility with theme toggler

--- a/src/styles/_custom-classes.scss
+++ b/src/styles/_custom-classes.scss
@@ -20,6 +20,10 @@
 	font-size: calc(2rem + 1.5vw);
 }
 
+.custom-link-padding {
+	padding: 10px;
+}
+
 .custom-position {
 	top: 70px;
 	left: -12px;
